@@ -1,4 +1,4 @@
 DIST GR-lida-0.3.4.tar.bz2 373794 RMD160 66d5d0e6e5979e6ec087361b9df16c1743f52ac5 SHA1 c2620a63e83f38f90c17cb0ba544e88a9d9b5a3e SHA256 31ba9563cd79f1788dedc4bd1d1d7d143e40124daf2456ac9ea2abb540e9a58c
-EBUILD gr-lida-0.3.4.ebuild 852 RMD160 1cfdc4fd17f399826620ab4bd00c0f65e969a796 SHA1 37b36f787b74bc6f5f9c6a9f3163801e09b321bc SHA256 b319cb97fd1252c6113fc4879678623950b6ba20299d9f2e62b5c2d8523ca6d0
-MISC ChangeLog 326 RMD160 d785ef30a5006c6a72236325ca03359c34b72dda SHA1 dab083bada2899631cf35ff8b5c79c0309a69e73 SHA256 66ac2f3c019a512fda9deaface58655327cc7fcd2dc234f5d2ba71db2f284351
+EBUILD gr-lida-0.3.4.ebuild 832 RMD160 012938b88005f08bd3f60c7d170010e79ff78c1c SHA1 e674eb1cf08890f4e85d983767c409a9819a6c37 SHA256 aac6e83b5fcc4898596185a619cd0ff351a765ba8c6891786ab3280548f4e969
+MISC ChangeLog 431 RMD160 4be6888eee7a815c512134f111de078a54ebe137 SHA1 f1b76c6b24defbcabff27ba07df7a8444288e630 SHA256 712160f1c038d4774b051f49b4fd9946bd29eb99ed7bb9466e75f2527ec83de8
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
